--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
