--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
+    "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
