--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@gorhom/bottom-sheet": "^4.3.1",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
